# python-typst

./: .gitignore  AGENTS.md  README.md  automate.py  build.ps1  cov.xml  format.ps1  functions.py  param_types.py  pyproject.toml  readme.py  run_tests.ps1  sync_venv.ps1  tests.py  utils.py
.opencode/memory/: 2026-05-21.logfmt  2026-05-23.logfmt
.opencode/skills/typst-doc-verify/: SKILL.md
doc/code review/: 2026-05-21.md  2026-05-22.md  2026-05-24.md
doc/references/: spread_syntax.md
scripts/: __init__.py  _example_collect.py  generate_readme.py  generate_typst_fixture.py
src/typstpy/: __init__.py  _constants.py  _core.py  _docs.py  customizations.py  document.py  subpar.py
src/typstpy/_core/: __init__.py  _decorators.py  _protocols.py  _render.py  decorators.py  ir.py  protocols.py  registry.py  render.py
src/typstpy/std/: __init__.py  layout.py  model.py  text.py  visualize.py
tests/: run_tests.ps1  tests.py  update_fixtures.ps1  update_readme.ps1
tests/typstpy/: test_core.py  test_customizations.py  test_docs.py  test_document.py  test_public_api.py  test_typst_fixture.py
tests/typstpy/std/: test_init.py  test_layout.py  test_model.py  test_text.py  test_visualize.py
typstpy/: __init__.py  _core.py  _utils.py  customizations.py  document.py  functions.py  param_types.py  subpar.py  typings.py  utils.py
typstpy/_utils/: __init__.py  concepts.py  decorators.py  format.py  render.py  utils.py
typstpy/param_types/: __init__.py  _base.py  types.py
typstpy/std/: __init__.py  foundations.py  layout.py  model.py  text.py  visualize.py
