[project]
name = "typstpy"
version = "1.3.1-alpha.0"
description = "Python interface to generate executable Typst code."
authors = [{ name = "chenjunhan", email = "beibingyangliuying@foxmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "attrs>=25.3.0",
    "deprecated>=1.2.18",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pyperclip>=1.9.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D202"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src --cov-report=xml --cov-report=term-missing"
testpaths = ["src", "tests"]
python_files = "test_*.py"
